# spacy-dbpedia-spotlight

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: tests.yml
spacy_dbpedia_spotlight/: __init__.py  entity_linker.py  util.py
tests/: test_extensive.py  test_load_nlp.py
