[metadata]
version = 0.1.3
description = SpaCy DBpedia Spotlight wrapper
description-file = README.md
url = https://github.com/MartinoMensio/spacy_dbpedia_spotlight
author = Martino Mensio
author_email = martino.mensio@open.ac.uk

[options]
install_requires =
    spacy>=2.0.0

[options.entry_points]
spacy_factories =
    annotate_dbpedia_spotlight = spacy_dbpedia_spotlight:EntityLinker