[metadata]
version = 0.2.2
description = SpaCy DBpedia Spotlight wrapper
description-file = README.md
url = https://github.com/MartinoMensio/spacy-dbpedia-spotlight
author = Martino Mensio
author_email = martino.mensio@open.ac.uk

[options]
install_requires =
    spacy>=3
    loguru

[options.entry_points]
spacy_factories =
    dbpedia_spotlight = spacy_dbpedia_spotlight:entity_linker.EntityLinker